[package]
name = "risc0-crypto-shootout"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
colored = "3.0"
regex = { version = "1.11", default-features = false, features = ["std", "perf"] }
risc0-zkvm = { version = "3.0", default-features = false, features = ["client"] }
tabular = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thousands = "0.2.0"

[build-dependencies]
risc0-build = "3.0"

[package.metadata.risc0]
methods = ["guest"]
